--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Title Page</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="dist/css/priceParser.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,7 +21,8 @@
             background-color: #505050 !important;
             color: #fff;
         }
-        .position.heading td{
+
+        .position.heading td {
             background-color: #31708f !important;
             color: #fff;
         }
@@ -34,7 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
 
-            <form class="navbar-form navbar-left" >
+            <form class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" ng-model="query" placeholder="Поиск" class="form-control">
                 </div>
@@ -47,27 +49,33 @@
 <br>
 <br>
 <br>
-<div class="container" >
-    <div class="row" >
+<div class="container">
+    <div class="row">
         <div class="col-sm-12">
-            <h1>Super converter</h1>
+            <h1>Price converter</h1>
         </div>
-        <div class="col-sm-12" ng-if="parsedPrice == ''">
+        <div class="col-sm-12" ng-if="!showResult">
             <div class="form-group">
-                <textarea ng-model="text" class="form-control" rows="20" ></textarea>
+                <textarea ng-model="text" class="form-control" rows="20"></textarea>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary" ng-click="convert(text)">Ок</button>
+                <button type="submit" ng-if="positions.length" class="btn btn-primary" ng-click="showPositions()">
+                    <i>История -></i>
+                </button>
             </div>
         </div>
-        <div class="col-sm-12" ng-if="parsedPrice != ''">
+        <div class="col-sm-12" ng-if="showResult">
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary" ng-click="back()">Назад</button>
+            </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary" ng-click="clear()">Очистить</button>
             </div>
 
 
             <div class="well">
-                <div >
+                <div>
                     <positions list="positions"></positions>
                 </div>
             </div>
@@ -75,14 +83,14 @@
     </div>
 </div>
 <!-- jQuery -->
-<script src="//code.jquery.com/jquery.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
 
 <script src="dist/js/priceParser.js"></script>
 <script src="dist/templates/templates.js"></script>
 
 <!-- Bootstrap JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
 </body>
